Add the locale to the possibles args when starting
